--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-initial-project",
+  "name": "ifgoiano-noticias",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "cheerio": "^0.20.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-load": "^1.1.15",
     "hbs": "~3.1.0",
+    "mongoose": "^4.5.3",
     "morgan": "~1.6.1",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
 }
