--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "express": "~4.13.1",
     "express-load": "^1.1.15",
     "hbs": "~3.1.0",
-    "mongoose": "^4.5.3",
+    "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
     "request": "^2.72.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "winston": "^2.2.0"
   }
 }
