--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "express-load": "^1.1.15",
+    "express-load": "1.1.16",
     "hbs": "~3.1.0",
     "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
