--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
 
         {
             "type": "node",
             "request": "launch",
             "name": "nodemon",
             "runtimeExecutable": "nodemon",
-            "program": "${workspaceFolder}/bin/www",
+            "program": "${workspaceFolder}/getAllNews.js",
             "restart": true,
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
@@ -19,7 +20,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}/bin/www",
+            "program": "${workspaceRoot}/getAllNews.js",
             "cwd": "${workspaceRoot}",
             "outFiles": [],
             "sourceMaps": true
