--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
         "test": "mocha tests --recursive --watch"
     },
     "dependencies": {
-        "body-parser": "~1.13.2",
-        "cheerio": "^0.20.0",
-        "cookie-parser": "~1.3.5",
+        "axios": "^0.19.2",
+        "body-parser": "^1.19.0",
+        "cheerio": "^0.22.0",
         "cors": "^2.8.1",
-        "debug": "~2.2.0",
-        "express": "~4.13.1",
+        "debug": "^4.1.1",
+        "express": "^4.17.1",
         "express-load": "1.1.16",
-        "hbs": "~3.1.0",
-        "mongoose": "^4.4.12",
-        "morgan": "~1.6.1",
-        "request": "^2.72.0",
-        "serve-favicon": "~2.3.0",
+        "mongoose": "^5.9.7",
+        "morgan": "^1.10.0",
+        "mysql2": "^2.1.0",
+        "sequelize": "^5.21.6",
+        "serve-favicon": "^2.5.0",
         "winston": "^2.2.0"
     },
     "devDependencies": {
