--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "mongoose": "^5.9.7",
         "morgan": "^1.10.0",
         "mysql2": "^2.1.0",
+        "node-telegram-bot-api": "^0.40.0",
         "sequelize": "^5.21.6",
         "serve-favicon": "^2.5.0",
         "winston": "^2.2.0"
