--- a/package.json
+++ b/package.json
@@ -7,22 +7,29 @@
         "test": "mocha tests --recursive --watch"
     },
     "dependencies": {
-        "axios": "^0.19.2",
+        "axios": "^1.7.9",
         "body-parser": "^1.19.0",
-        "cheerio": "^0.22.0",
+        "cheerio": "^1.0.0",
         "cors": "^2.8.1",
         "debug": "^4.1.1",
+        "dotenv-safe": "^8.2.0",
         "express": "^4.17.1",
         "express-load": "1.1.16",
-        "mongoose": "^5.9.7",
+        "mongoose": "^8.9.5",
         "morgan": "^1.10.0",
-        "mysql2": "^2.1.0",
-        "node-telegram-bot-api": "^0.40.0",
-        "sequelize": "^5.21.6",
+        "mysql2": "^3.12.0",
+        "node-telegram-bot-api": "^0.63.0",
+        "sequelize": "^6.37.5",
         "serve-favicon": "^2.5.0",
+        "swagger-jsdoc": "^4.0.0",
+        "swagger-ui-express": "^4.1.4",
         "winston": "^2.2.0"
     },
     "devDependencies": {
-        "chai": "4.1.2"
+        "babel-core": "^5.8.38",
+        "chai": "4.1.2",
+        "mocha": "^10.2.0",
+        "nodemon": "^3.0.1",
+        "should": "13.1.3"
     }
 }
